docs: refocus virtual thread README on onboarding